# sacrifice

./: CMakeLists.txt  Cargo.toml  README.md
cxx/: sac.cpp  sac.h
ffi/: Cargo.toml
ffi/src/: lib.rs
src/: game.rs  header.rs  lib.rs  node.rs  prelude.rs  reader.rs  tests.rs  writer.rs
src/game/: header.rs  mod.rs  node.rs  pgn.rs  reader.rs  tests.rs  writer.rs
src/game/p/: header.rs  mod.rs  node.rs  reader.rs  tree.rs  writer.rs
src/p/: game.rs  mod.rs  node.rs
src/pgn/: reader.rs  writer.rs
