[package]
name = "sacrifice"
description = "A feature-rich chess library for Rust"
version = "0.1.10"
edition = "2021"

repository = "https://github.com/fr-therook/sacrifice"
license = "MIT"
keywords = ["chess", "pgn"]

[dependencies]
shakmaty = "0.24"
pgn-reader = "0.23"

[dependencies.uuid]
version = "1.3"
features = ["v4", "fast-rng", "macro-diagnostics"]
