[workspace]
members = ["ffi"]

[workspace.package]
edition = "2021"
version = "0.3.0-alpha.3"

authors = ["soyflourbread <soyflourbread@gmail.com>"]

[package]
name = "sacrifice"
description = "A feature-rich chess library for Rust"

edition.workspace = true
version.workspace = true
authors.workspace = true

repository = "https://github.com/fr-therook/sacrifice"
license = "MIT"
keywords = ["chess", "pgn"]

[dependencies]
shakmaty = "0.26"
pgn-reader = "0.25"
